Restructure the processor definition

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,16 +1,15 @@
 GCC_COMPILER=riscv32-unknown-elf-gcc
 GCC_OBJCOPY=riscv32-unknown-elf-objcopy
 
-all:
-	assemble
-	build
-	@echo "Done"
+all: build
 
 assemble:
 	$(GCC_COMPILER) -S test.c
 
 build:
 	$(GCC_COMPILER) -Wl,-Ttext=0x0 -nostdlib -march=rv64i -mabi=lp64 -o test test.S
+
+bin:
 	$(GCC_OBJCOPY) -O binary test test.bin
 
 clean:
