--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ path = "lib/bits"
 enum_dispatch = "0.3.11"
 modular-bitfield = "0.11.2"
 num = "0.4.0"
+strum = { version = "0.25.0", features = ["derive"] }
