that's a *loop* lol

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,7 +9,7 @@ assemble:
 build:
 	$(GCC_PREFIX)-gcc -Wl,-Ttext=0x0 -nostdlib -march=rv64i -mabi=lp64 -o $(TARGET) $(TARGET).S
 	$(GCC_PREFIX)-objdump -t $(TARGET) > $(TARGET).map
-	$(GCC_PREFIX)-objdump -S $(TARGET) > $(TARGET).lst
+	$(GCC_PREFIX)-objdump -d -M no-aliases $(TARGET) > $(TARGET).lst
 	$(GCC_PREFIX)-objcopy -O binary $(TARGET) $(TARGET).bin
 	$(GCC_PREFIX)-objcopy -O ihex $(TARGET) $(TARGET).hex
 
