CLI, IMA, Linux, UART

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 path = "lib/bits"
 
 [dependencies]
+clap = { version = "4.3.19", features = ["derive"] }
 enum_dispatch = "0.3.11"
 modular-bitfield = "0.11.2"
 num = "0.4.0"
